examples/test/testpolicy13789.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13789
  namespace: namespace378
spec:
  podSelector:
    matchLabels:
      key12: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value4
          key0: value10
      podSelector:
        matchLabels:
          key46: value38
          key15: value3
          key19: value21
